[package]
name = "plume_network_release"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0.14"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
alloy = { version = "0.9.2", features = ["full", "json", "eip712"] }
alloy-chains = "0.1.36"
serde_derive = "1.0"
toml = "0.8.19"
##日志打印
log = "0.4"
env_logger = "0.11.6"
dirs = "6.0.0"
